// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WalletDetail > should render 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-t border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex justify-between items-center space-x-4 w-full"
    >
      <div
        class="space-y-2 w-40 whitespace-nowrap sm:flex-1"
      >
        <div
          class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Test
        </div>
        <div
          class="hidden items-center font-semibold sm:flex"
        >
          test
        </div>
      </div>
      <div
        class="flex overflow-auto justify-end items-center w-full sm:w-auto"
      >
        <div
          class="flex overflow-auto justify-end items-center pr-4 w-full font-semibold sm:hidden"
        >
          <div
            class="w-full truncate"
          >
            test
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletDetail > should render with bottom border 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-b border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex justify-between items-center space-x-4 w-full"
    >
      <div
        class="space-y-2 w-40 whitespace-nowrap sm:flex-1"
      >
        <div
          class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Test
        </div>
        <div
          class="hidden items-center font-semibold sm:flex"
        >
          test
        </div>
      </div>
      <div
        class="flex overflow-auto justify-end items-center w-full sm:w-auto"
      >
        <div
          class="flex overflow-auto justify-end items-center pr-4 w-full font-semibold sm:hidden"
        >
          <div
            class="w-full truncate"
          >
            test
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletDetail > should render with extra children 1`] = `
<div>
  <div
    class="flex items-center py-0 space-x-4 border-t border-dashed border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex justify-between items-center space-x-4 w-full"
    >
      <div
        class="space-y-2 w-40 whitespace-nowrap sm:flex-1"
      >
        <div
          class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Test
        </div>
        <div
          class="hidden items-center font-semibold sm:flex"
        >
          test
        </div>
      </div>
      <div
        class="flex overflow-auto justify-end items-center w-full sm:w-auto"
      >
        <div
          class="flex overflow-auto justify-end items-center pr-4 w-full font-semibold sm:hidden"
        >
          <div
            class="w-full truncate"
          >
            test
          </div>
        </div>
        <div
          data-testid="TEST_CHILD"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletDetail > should render with top border 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-t border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex justify-between items-center space-x-4 w-full"
    >
      <div
        class="space-y-2 w-40 whitespace-nowrap sm:flex-1"
      >
        <div
          class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Test
        </div>
        <div
          class="hidden items-center font-semibold sm:flex"
        >
          test
        </div>
      </div>
      <div
        class="flex overflow-auto justify-end items-center w-full sm:w-auto"
      >
        <div
          class="flex overflow-auto justify-end items-center pr-4 w-full font-semibold sm:hidden"
        >
          <div
            class="w-full truncate"
          >
            test
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletDetail > should render without border 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 sm:py-6 no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex justify-between items-center space-x-4 w-full"
    >
      <div
        class="space-y-2 w-40 whitespace-nowrap sm:flex-1"
      >
        <div
          class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Test
        </div>
        <div
          class="hidden items-center font-semibold sm:flex"
        >
          test
        </div>
      </div>
      <div
        class="flex overflow-auto justify-end items-center w-full sm:w-auto"
      >
        <div
          class="flex overflow-auto justify-end items-center pr-4 w-full font-semibold sm:hidden"
        >
          <div
            class="w-full truncate"
          >
            test
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletDetail > should render without padding 1`] = `
<div>
  <div
    class="flex items-center py-0 space-x-4 border-t border-dashed border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex justify-between items-center space-x-4 w-full"
    >
      <div
        class="space-y-2 w-40 whitespace-nowrap sm:flex-1"
      >
        <div
          class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Test
        </div>
        <div
          class="hidden items-center font-semibold sm:flex"
        >
          test
        </div>
      </div>
      <div
        class="flex overflow-auto justify-end items-center w-full sm:w-auto"
      >
        <div
          class="flex overflow-auto justify-end items-center pr-4 w-full font-semibold sm:hidden"
        >
          <div
            class="w-full truncate"
          >
            test
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
